Prevent image overflowing.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,6 +116,11 @@ pre {
     word-wrap: break-word;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 article {
     padding-top: 40px;
 }
